feat(demo): headless runnable prototype — two engines deliver a message through real obsd
DeppisDemo is the first runnable artifact for the core: two independent client
engines (Alice=Initiator, Bob=Responder) pair out of band, then Alice's message is
delivered metadata-privately through the REAL Rust obsd sidecar — the same path the
cross-process tests exercise, now packaged as a program you can start:

  cargo build --bin obsd   # in oblivious-sidecar/
  sbt "transport/runMain transport.DeppisDemo"

The demo spawns obsd, pairs the two engines (safety-number compare), sends, and
drives rounds: each client writes exactly one 256B frame (real or cover) and reads
once per round, so active and idle rounds are indistinguishable (FR-012). It prints
the DEV, NO METADATA PRIVACY label (Constitution IV — dev store/notify, unattested).

run(channel, notifyKey): Boolean is split out (no process mgmt / sys.exit) so the
integration suite drives it against the test ObsdHarness — DeppisDemoSpec asserts
the message actually reaches Bob. main() handles obsd spawn + exit code.

Note the demo plays the PING aggregation front (seals Bob's per-buddy notify bit and
signals it to obsd over gRPC when Alice sends a real frame); that bridge is not yet a
standalone process. build.sbt: transport run is forked with --enable-native-access
(the sealer uses libsodium). Full transport suite green (26).